--- a/sass/main.sass
+++ b/sass/main.sass
@@ -233,8 +233,138 @@ body
 				margin-bottom: 20px
 			p
 				font-family: $main-font
+				font-size: 13px
+		.fruit-left
+			background-image: url('http://i65.tinypic.com/34dg0gn.png')
+			background-size: cover
+			background-position: center
+		.fruit-right
+			background-image: url('http://i64.tinypic.com/117dxy8.png')
+			background-size: cover
+			background-postion: center
+		.yourself-text
+			background-color: white
+			padding: 40px 80px 40px 40px
+			h2
+				font-family: 'Montserrat'
+				font-size: 16px
+				font-weight: bold
+				color: $red
+				letter-spacing: 2px
+				text-transform: uppercase
+			h1
+				font-family: $main-font
+				font-size: 32px
+				color: $green
+				text-transform: uppercase
+				letter-spacing: 2px
+				margin-top: 0
+			img
+				display: inline
+				position: absolute
+				right: 30px
+				top: 60px
+			p
+				font-size: 13px
+				font-weight: bold
+				font-family: $main-font
+				padding: 5px
+				line-height: 25px
+		.habits-text
+			background-color: $green
+			color: white
+			padding: 40px 40px 30px 30px
+			h2
+				font-family: 'Montserrat'
+				font-size: 16px
+				font-weight: bold
+				color: white
+				letter-spacing: 2px
+				text-transform: uppercase
+			h1
+				font-family: $main-font
+				font-size: 32px
+				color: white
+				text-transform: uppercase
+				margin-top: 0
+			img
+				display: inline
+				position: absolute
+				right: 30px
+				top: 60px
+			p
+				font-size: 13px
+				font-weight: bold
+				font-family: $main-font
+				padding: 5px
+				line-height: 25px
 		.grid
 			min-height: 325px
+.banner
+	min-height: 780px
+	background-image: url('http://i68.tinypic.com/2ajxlrl.jpg')
+	background-size: cover
+	background-position: top
+	img
+		display: inline
+		position: relative
+		bottom: 0
+		width: 100%
+		min-height: 260px
+	.big-slogan
+		font-family: $main-font
+		color: white
+		text-align: center
+		padding: 220px 360px 175px 360px
+		h1
+			font-size: 36px
+		p
+			font-size: 14px
+			margin-top: 20px
+			padding: 0 30px
+footer
+	min-height: 400px
+	background-color: rgb(13, 17, 25)
+	font-family: $main-font
+	padding: 30px 150px
+	h2
+		color: white
+		font-size: 16px
+	p
+		font-size: 15px
+		color: rgb(114, 133, 148)
+	.fa
+		display: inline-block
+		border-radius: 50%
+		padding: 0.5em 0.6em
+		font-size: 26px
+		margin-left: 10px
+		transition: 0.7s
+	.fa-facebook
+		padding: 0.5em 0.7em
+		background-color: rgb(46, 49, 146)
+		color: rgb(244, 242, 242)
+		&:hover
+			color: rgb(46, 49, 146)
+			background-color: rgb(244, 242, 242)
+	.fa-twitter
+		background-color: rgb(0, 174, 239)
+		color: rgb(244, 242, 242)
+		&:hover
+			color: rgb(0, 174, 239)
+			background-color: rgb(244, 242, 242)
+	.fa-youtube
+		color: rgb(244, 242, 242)
+		background-color: rgb(237, 49, 35)
+		&:hover
+			color: rgb(237, 49, 35)
+			background-color: rgb(244, 242, 242)
+	.fa-linkedin
+		color: rgb(244, 242, 242)
+		background-color: rgb(23, 26, 143)
+		&:hover
+			color: rgb(23, 26, 143)
+			background-color: rgb(244, 242, 242)
 @media(max-width: 1200px)
 	.green-features
 		padding: 0px 70px
