--- a/sass/main.sass
+++ b/sass/main.sass
@@ -68,11 +68,13 @@ body
 			color: white
 			font-family: $main-font
 			font-size: 14px
+			font-weight: bold
+			font-style: italic
+			letter-spacing: 2px
 			.arrow
 				padding-left: 10px
 			&:hover
-				background-color: #27ae60
-				padding: 7px
+				color: $red
 				border-radius: 10px
 				.arrow
 					animation-name: arrowMove
@@ -308,7 +310,7 @@ body
 	img
 		display: inline
 		position: relative
-		bottom: 0
+		bottom: -20px
 		width: 100%
 		min-height: 260px
 	.big-slogan
@@ -370,12 +372,21 @@ footer
 		padding: 0px 70px
 	.red-features
 		padding: 0px 70px
+	footer	
+		.fa
+			font-size: 20px
+			margin-left: 4px
 @media(max-width: 1007px)
 	.green-features
 		.features
 			.training
 				p
 					padding: 0px 3px 20px 3px
+	footer
+		padding: 30px 50px
+		.fa
+			font-size: 22px
+			margin-left: 1px
 @media(max-width: 992px)
 	.header
 		background-size: 150% 100%
@@ -417,6 +428,11 @@ footer
 	.green-features
 		.features-green-grid
 			padding: 0 100px
+	footer	
+		.fa
+			font-size: 40px
+			margin-left: 20px
+			margin-bottom: 20px
 @media(max-width: 520px)
 	.header
 		background-size: 180% 100%
@@ -427,3 +443,8 @@ footer
 			padding: 20px 10px
 		.features-green-grid
 			padding: 0
+	footer	
+		.fa
+			font-size: 24px
+			margin-left: 4px
+			margin-bottom: 20px
