--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ body {
         margin-left: 10px; }
   .red-features .features-red-grid .lifestyle-text {
     background-color: white;
-    padding: 40px 40px 30px 30px; }
+    padding: 30px 40px 30px 30px; }
     .red-features .features-red-grid .lifestyle-text h2 {
       font-family: 'Montserrat';
       font-size: 16px;
@@ -224,7 +224,7 @@ body {
   .red-features .features-red-grid .summer-text {
     background-color: #a2ca28;
     color: white;
-    padding: 40px 80px 40px 40px; }
+    padding: 30px 80px 40px 40px; }
     .red-features .features-red-grid .summer-text h1 {
       font-family: "Open Sans";
       font-size: 36px;
@@ -325,7 +325,7 @@ body {
       padding: 0 30px; }
 
 footer {
-  min-height: 400px;
+  min-height: 500px;
   background-color: #0d1119;
   font-family: "Open Sans";
   padding: 30px 150px; }
@@ -367,15 +367,56 @@ footer {
     footer .fa-linkedin:hover {
       color: #171a8f;
       background-color: #f4f2f2; }
+  footer .newsletter {
+    float: right;
+    padding: 20px 40px; }
+    footer .newsletter input {
+      padding: 20px 30px;
+      border: 0;
+      font-family: "Open Sans";
+      color: #728594;
+      font-size: 14px; }
+      footer .newsletter input:hover {
+        cursor: text; }
+    footer .newsletter #email {
+      width: 380px; }
+      footer .newsletter #email:hover {
+        cursor: text; }
+    footer .newsletter button {
+      padding: 20px 30px;
+      font-family: "Open Sans";
+      background-color: #a2ca28;
+      color: #ecf0f1;
+      font-weight: bold;
+      border: 0;
+      letter-spacing: 1px; }
+      footer .newsletter button:hover {
+        cursor: pointer; }
+      footer .newsletter button .fa-arrow-circle-right {
+        margin-left: 5px; }
 
 @media (max-width: 1200px) {
   .green-features {
     padding: 0px 70px; }
   .red-features {
     padding: 0px 70px; }
+    .red-features .features-red-grid .yourself-text {
+      padding: 20px 80px 20px 40px; }
+    .red-features .features-red-grid .habits-text {
+      padding: 20px 10px 20px 10px; }
+  .banner .big-slogan {
+    padding: 220px 200px 175px 200px; }
   footer .fa {
     font-size: 20px;
-    margin-left: 4px; } }
+    margin-left: 4px; }
+  footer .newsletter {
+    padding: 20px 0; }
+    footer .newsletter input {
+      padding: 10px; }
+    footer .newsletter #email {
+      width: 300px; }
+    footer .newsletter button {
+      padding: 10px; } }
 
 @media (max-width: 1007px) {
   .green-features .features .training p {
@@ -405,13 +446,28 @@ footer {
       .green-features .features .training p {
         padding: 20px 3px; }
   .red-features {
-    padding: 0 30px; } }
+    padding: 0 30px; }
+    .red-features .features-red-grid .lifestyle-text {
+      padding: 10px 40px 10px 30px; }
+    .red-features .features-red-grid .summer-text {
+      padding: 10px 80px 10px 40px; }
+    .red-features .features-red-grid .yourself-text {
+      padding: 20px 20px 10px 20px; }
+      .red-features .features-red-grid .yourself-text img {
+        top: 20px; }
+    .red-features .features-red-grid .habits-text {
+      padding: 20px 20px 10px 20px; }
+      .red-features .features-red-grid .habits-text img {
+        top: 20px; }
+  .banner .big-slogan {
+    padding: 220px 100px 175px 100px; } }
 
 @media (max-width: 767px) {
   .header .navbar {
     padding: 20px 100px; }
   .header .navbar-collapse {
-    border-top: solid 1px #ecf0f1; }
+    border-top: solid 1px #ecf0f1;
+    background-color: rgba(253, 99, 78, 0.6); }
     .header .navbar-collapse li a {
       font-size: 24px;
       font-weight: bold; }
@@ -424,10 +480,28 @@ footer {
         font-size: 24px; }
   .green-features .features-green-grid {
     padding: 0 100px; }
+  .red-features .features-red-grid .lifestyle-text {
+    padding: 30px 80px 30px 40px; }
+  .red-features .features-red-grid .summer-text {
+    padding: 30px 80px 30px 40px; }
+  .banner .big-slogan {
+    padding: 220px 30px 175px 30px; }
+    .banner .big-slogan h1 {
+      font-size: 28px; }
   footer .fa {
     font-size: 40px;
     margin-left: 20px;
-    margin-bottom: 20px; } }
+    margin-bottom: 20px; }
+  footer .newsletter {
+    padding: 0;
+    font-size: 12px; }
+    footer .newsletter input {
+      padding: 5px;
+      font-size: 12px; }
+    footer .newsletter #email {
+      width: 120px; }
+    footer .newsletter button {
+      padding: 5px; } }
 
 @media (max-width: 520px) {
   .header {
@@ -438,9 +512,13 @@ footer {
     padding: 20px 10px; }
   .green-features .features-green-grid {
     padding: 0; }
+  .banner .big-slogan {
+    padding: 220px 10px 175px 10px; }
   footer .fa {
     font-size: 24px;
     margin-left: 4px;
-    margin-bottom: 20px; } }
+    margin-bottom: 20px; }
+  footer .newsletter {
+    display: none; } }
 
 /*# sourceMappingURL=main.css.map */
