--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,7 +8,7 @@ body
 	max-width: 1800px
 .header
 	min-height: 900px
-	background-image: url('http://i68.tinypic.com/24weijp.png')
+	background-image: url('../image/head.png')
 	background-position: center
 	background-size: cover
 	.navbar
@@ -119,12 +119,12 @@ body
 					border-bottom: 2px dotted $green
 		.image-up
 			min-height: 400px
-			background-image: url('http://i65.tinypic.com/35cj31z.png')
+			background-image: url('../image/right-up.png')
 			background-position: center
 			background-size: cover
 		.image-down
 			min-height: 400px
-			background-image: url('http://i66.tinypic.com/25plefk.png')
+			background-image: url('../image/left-down.png')
 			background-position: center
 			background-size: cover
 		.image
@@ -161,11 +161,11 @@ body
 	padding: 0px 150px
 	.features-red-grid
 		.running
-			background-image: url('http://i63.tinypic.com/jpvlgn.png')
+			background-image: url('../image/red-left-up.png')
 			background-size: cover
 			background-position: center top
 		.surfing
-			background-image: url('http://i67.tinypic.com/r0d24g.png')
+			background-image: url('../image/red-right-up.png')
 			background-size: cover
 			background-position: center
 			.date
@@ -237,11 +237,11 @@ body
 				font-family: $main-font
 				font-size: 13px
 		.fruit-left
-			background-image: url('http://i65.tinypic.com/34dg0gn.png')
+			background-image: url('../image/red-left-down.png')
 			background-size: cover
 			background-position: center
 		.fruit-right
-			background-image: url('http://i64.tinypic.com/117dxy8.png')
+			background-image: url('../image/red-right-down.png')
 			background-size: cover
 			background-postion: center
 		.yourself-text
@@ -304,7 +304,7 @@ body
 			min-height: 325px
 .banner
 	min-height: 780px
-	background-image: url('http://i68.tinypic.com/2ajxlrl.jpg')
+	background-image: url('../image/Banner.png')
 	background-size: cover
 	background-position: top
 	img
